--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Zig
-      uses: ziglang/setup-zig@0.10.1
+    - name: Install Zig
+      run: |
+        wget https://ziglang.org/builds/zig-linux-x86_64-0.11.0-dev.3132+465272921.tar.xz
+        tar -xf zig-linux-x86_64-0.11.0-dev.3132+465272921.tar.xz
+        sudo mv zig-linux-x86_64-0.11.0-dev.3132+465272921/zig /usr/local/bin/
+        zig version
 
     - name: Build and test
       run: |
