--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       run: |
         wget https://ziglang.org/builds/zig-linux-x86_64-0.11.0-dev.3132+465272921.tar.xz
         tar -xf zig-linux-x86_64-0.11.0-dev.3132+465272921.tar.xz
-        sudo mv zig-linux-x86_64-0.11.0-dev.3132+465272921/zig /usr/local/bin/
-        zig version
+        sudo mv zig-linux-x86_64-0.11.0-dev.3132+465272921/zig zig
+        ./zig/zig version
 
     - name: Build and test
       run: |
-        zig build
-        zig test
+        ./zig/zig build
+        ./zig/zig test
