--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         wget https://ziglang.org/builds/zig-linux-x86_64-0.11.0-dev.3132+465272921.tar.xz
         tar -xf zig-linux-x86_64-0.11.0-dev.3132+465272921.tar.xz
         sudo mv zig-linux-x86_64-0.11.0-dev.3132+465272921 $HOME/zig
-        ./zig/zig version
+        $HOME/zig/zig version
 
     - name: Build and test
       run: |
