--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,12 @@ jobs:
 
     - name: Install Zig
       run: |
-        wget https://ziglang.org/builds/zig-linux-x86_64-0.14.0-dev.1951+857383689.tar.xz
-        tar -xf zig-linux-x86_64-0.14.0-dev.1951+857383689.tar.xz
-        sudo mv zig-linux-x86_64-0.14.0-dev.1951+857383689 $HOME/zig
+        wget https://ziglang.org/builds/zig-linux-x86_64-0.14.0-dev.2643+fb43e91b2.tar.xz
+        tar -xf zig-linux-x86_64-0.14.0-dev.2643+fb43e91b2.tar.xz
+        sudo mv zig-linux-x86_64-0.14.0-dev.2643+fb43e91b2 $HOME/zig
         $HOME/zig/zig version
 
     - name: Build and test
       run: |
         mkdir dirty 
-        $HOME/zig/zig build
-        $HOME/zig/zig build test
-        $HOME/zig/zig test src/cursor_test.zig
+        $HOME/zig/zig test src/root.zig
